// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerticNodeCollection filters out null and false nodes from a collection 1`] = `
<script
  type="application/ld+json"
>
  {"@context":"https://schema.org/","author":[{"@type":"Person","name":"Cool Carl"},{"@type":"Person","name":"Brave Mark"}]}
</script>
`;

exports[`GenerticNodeCollection filters renders GenericNode with null as type 1`] = `
<script
  type="application/ld+json"
>
  {"@context":"https://schema.org/","author":[{"@type":"Person","name":"Cool Carl"}]}
</script>
`;
